# sml.cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/: CONTRIBUTING.md
.github/workflows/: quality_gates.yml
benchmark/complex/: CMakeLists.txt
benchmark/connection/: Makefile  tensor_cache_locality.cpp
benchmark/header/: CMakeLists.txt
benchmark/simple/: CMakeLists.txt  co_sm.cpp
docs/: optimization.notes.md
example/: dependency_injection.cpp  dispatch_table.cpp  eval.cpp
include/boost/: sml.hpp
include/boost/sml/utility/: co_sm.hpp  dispatch_table.hpp  sm_pool.hpp
scripts/: quality_gates.sh
test/: CMakeLists.txt
test/common/: test.hpp
test/ft/: CMakeLists.txt  actions_process_n_defer.cpp  co_sm.cpp  composite.cpp  constexpr.cpp  deep_sm.cpp  dependencies.cpp  di.cpp  dispatch_table.cpp  dont_instantiate_statemachine_class.cpp  exceptions.cpp  extended_tests.cpp  issue_171.cpp  issue_253.cpp  issues_test.cpp  policies_logging.cpp  policies_testing.cpp  sizeof.cpp  state_machine.cpp  states.cpp  transition_table.cpp  transitions.cpp  unexpected_events.cpp
